<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="4dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewEntryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="1"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEntryAuthor"
        app:layout_constraintEnd_toEndOf="@+id/textViewEntryAuthor"
        app:layout_constraintStart_toStartOf="@+id/textViewEntryAuthor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEntryYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:fontFamily="@font/inter_medium"
        android:text="@string/year"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEntryAuthor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEntryAuthor"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntryAuthor" />

    <TextView
        android:id="@+id/textViewEntryAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:fontFamily="@font/inter_medium"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/author"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnMenu"
        app:layout_constraintStart_toEndOf="@+id/icBook"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntryTitle" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icBook"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription="@string/book_icon"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_book"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/more"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_more_hor"
        app:tint="@android:color/darker_gray" />
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>